# desdeo-webapi

./: .gitignore  .readthedocs.yaml  LUKE best front.csv  README.md  add_UTOPIA_users.py  add_exp_users.py  app.db  app.py  data_wrangling.py  models.py  problem.py  pyproject.toml  pytest.ini  requirements.txt  resources.py  test.py  views.py
UTOPIAData/: DM1.csv  DM2.csv  DM3.csv  DM4.csv  DM5.csv  DM6.csv  all_solutions.json  treatment_options.json
docs/source/: conf.py  index.rst  restful.rst
models/: log_models.py  method_models.py  problem_models.py  questionnaire_models.py  user_models.py
resources/: ea_resources.py  log_resources.py  method_resources.py  nimbus.py  problem_resources.py  questionnaire_resources.py  solution_archive_resources.py  user_resources.py
tests/: test_expressions_parser.py  test_guest_model.py  test_log.py  test_method_model.py  test_method_model_emo.py  test_problem_model.py  test_questionnaire_model.py  test_solution_process.py  test_user_model.py
tests/data/: pf_cat_data.csv  pf_dog_data.csv  testPF_3f_11x_max.csv  testPF_3f_11x_max_named.csv
utilities/: expression_parser.py
