[tool.poetry]
name = "desdeo-webapi"
version = "0.1.0"
description = ""
authors = ["Giovanni Misitano <giovanni.a.misitano@jyu.fi>"]

[tool.poetry.dependencies]
python = ">=3.9, < 3.11"
Flask = "^2.2"
requests = "^2.25.1"
Flask-JWT-Extended = "^4.0.2"
Flask-SQLAlchemy = ">=3.0.2"
passlib = "^1.7.4"
dill = {git = "https://github.com/uqfoundation/dill",  branch = "master" }
sympy = "^1.7.1"
Flask-Cors = "^3.0.10"
desdeo-problem = "^1.3.3"
flask-restx = "^1.0.0"
pandas = "^1.3.1"
simplejson = "^3.17.3"
openpyxl = "^3.0.9"
Werkzeug = ">=2.2"
desdeo-mcdm = "^1.3.2"
desdeo-emo = "^1.5.0"
ruff = "^0.1.6"

[tool.poetry.dev-dependencies]
flake8 = "^3.8.4"
black = "^20.8b1"
rope = "^0.18.0"
Flask-Testing = "^0.8.1"
Sphinx = "<=6.2.1"
sphinxcontrib-httpdomain = "^1.7.0"
rstcheck = "^3.3.1"
sphinx-rtd-theme = "^0.5.1"
pytest = "^6.2.3"
matplotlib = "^3.4.2"

[tool.ruff]
# Enable the pycodestyle (`E`) and Pyflakes (`F`) rules by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "E",
    "F",
    "W",
    "C901",
    "D",
    "UP",
    "S",
    "FBT",
    "B",
    "A",
    "COM",
    "C4",
    "T20",
    "PIE",
    "RET",
    "PTH",
    "TD",  # Comment this out if too annoying
    "FIX",  # Comment this out if too annoying
    "SIM",
    "PL",
    "TRY",
    "FURB",
    "LOG",
    "NPY",
    "RUF",
    "I",
    "N",
]
ignore = [
	"COM812", # Enforcing trailing commas is too annoying.
	"PLR0915", # "too many statements (>50)"
	"T201", # allow print statements
]  
pydocstyle.convention = "google"


# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = []
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

line-length = 120

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Assume Python 3.11.
target-version = "py312"

[tool.ruff.per-file-ignores]
# Ignore certain rules in test files
"tests/**/*.py" = [
    "S101", # asserts allowed in tests...
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    "PLR2004", # Magic value used in comparison, ...
]

[tool.ruff.format]
quote-style = "double"

[tool.poetry.group.dev.dependencies]
pytest-rerunfailures = "^11.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
